--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.App{
+padding: 0;
+margin:0;
+}
+.active{
+    background-color: rgba(26, 31, 55, 0.5);
+    border-radius: 15px;
+    width:219px !important;
+   
+}
+.img-active{
+    background-color: #0075FF;
+    height: 30px;
+    width: 30px;
+    border-radius: 12px;
+}
+.appcontainer{
+    background: linear-gradient(to bottom,rgba(15, 18, 59, 1) 10% ,transparent 40% ,rgba(2, 5, 21, 1) 90%);
+}
+.card-container{
+    background: linear-gradient(to right,rgba(6, 11, 38, 0.89),transparent);
+}
