--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ margin:0;
     border-radius: 12px;
 }
 .appcontainer{
-    background: linear-gradient(to bottom,rgba(15, 18, 59, 1) 10% ,transparent 40% ,rgba(2, 5, 21, 1) 90%);
+    background: linear-gradient(to bottom,rgba(15, 18, 59, 1) 5% ,transparent 90%);
 }
 .card-container{
     background: linear-gradient(to right,rgba(6, 11, 38, 0.89),transparent);
